# SaaS

./: .gitignore  README.md  pyproject.toml  技术逻辑确认.txt
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  containers.py
backend/app/core/: __init__.py  logger.py  mailer.py  middleware.py  rate_limit.py  security.py  verification.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/models/: __init__.py  docker.py  rbac.py  user.py
backend/app/schemas/: __init__.py  auth.py  docker.py
backend/app/services/: __init__.py  auth_service.py  docker_service.py  metrics_service.py
backend/config/: .env.example  __init__.py  settings.py
backend/tests/: __init__.py  test_auth.py  test_db_schema.py  test_docker_api.py  test_docker_service.py  test_frontend_contract.py  test_management_api.py
docs/: AGENTS.md  README.md  STRUCTURE.md  handoff.md
frontend/public/: containers.html  index.html  register.html  terminal.html
frontend/public/css/: login.css
frontend/public/js/: api.js  bg-canvas.js  containers.js  login.js  register.js  terminal.js
